--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,8 @@ flutter:
   assets:
       - assets/images/login.png
       - assets/images/signup.png
+      - assets/images/profile.jpg
+      - assets/images/yakub.jpg
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
